Added login integration and registration integration

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   flutter_speed_dial: ^7.0.0
   image_picker: ^1.0.4
   permission_handler: ^11.0.1
+  pdf: ^3.10.4
+  http: ^1.1.0
 
 dev_dependencies:
   flutter_test:
