--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   open_file: ^3.3.2
   qr_code_scanner: ^1.0.1
   path_provider: ^2.0.8
+  url_launcher: ^6.2.1
 
 dev_dependencies:
   flutter_test:
